[package]
name = "outerspace"
version = "0.1.0"
authors = ["Stef <stef@srilq.email>"]
edition = "2018"
description = "Methods for prefixing and suffixing the non-whitespace characters in a string."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
